# grace-code

./: .env.template  .gitignore  E2E_TEST_PLAN.md  README.md  USAGE.md  _memory_e2e_demo.py  _memory_safety_tests.py  _memory_smoke_verify.py  _patch_memory.py  _run_10tests.py  _run_tests.bat  _run_tests.py  conftest.py  package.json  pyproject.toml  test_plan_mode.py  todo.md
.claude/: settings.json
.forge-agent/: memory
.grace/: settings.json
_test_project/: config.py  pyproject.toml
_test_project/.forge-agent/artifacts/: art_0f024896.json  art_219b2079.json  art_57b216eb.json  art_b8a0ceed.json  art_c19c4688.json  art_c244dbc0.json  art_c57aff9d.json
_test_project/.forge-agent/datasets/: forge-agent-failures.jsonl
_test_project/.forge-agent/v2/: sessions.db
_test_project/src/: app.py  auth.py  user_router.py  user_service.py
_test_project/src/auth/: service.py  session.py  token.py
_test_project/src/middleware/: __init__.py  require_auth.py
_test_project/src/utils/: helpers.py  validators.py
_test_project_backup/: config.py  pyproject.toml
agent/: __init__.py  agent_config.py  capability_registry.py  circuit_breaker.py  completion.py  completion_guard.py  constants.py  constraints.py  context_trimming.py  core.py  dag.py  event_log.py  factory.py  multi_agent.py  observation_rendering.py  plan.py  policy.py  policy_registry.py  prompt.py  run_finalizer.py  runtime_controller.py  task.py  tool_orchestrator.py
config/: default.yaml  schema.py
context/: artifacts.py  compaction.py  evidence.py  history.py  manager.py  read_plan.py  repo_map.py  (+3 more)
(+496 files in other folders)
