[project]
name = "test-project"
version = "0.1.0"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "SIM"]
ignore = ["E501"]
